--- a/templates/swift/Example/PROJECT.xcodeproj/xcshareddata/xcschemes/PROJECT.xcscheme
+++ b/templates/swift/Example/PROJECT.xcodeproj/xcshareddata/xcschemes/PROJECT.xcscheme
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "73BC68112331E29F00E38310"
-               BuildableName = "PROJECTTests.xctest"
-               BlueprintName = "PROJECTTests"
+               BuildableName = "PROJECT_Tests.xctest"
+               BlueprintName = "PROJECT_Tests"
                ReferencedContainer = "container:PROJECT.xcodeproj">
             </BuildableReference>
          </TestableReference>
